--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "scripts": {
     "setup": "concurrently \"npm:setup:composer\" \"npm:setup:frontend\"",
     "setup:composer": "composer install",
-    "setup:frontend": "cd public && npm install",
-    "tailwind:dev": "tailwindcss -i ./src/input.css -o ./public/index.css --watch",
-    "tailwind:build": "tailwindcss -i ./src/input.css -o ./public/index.css --minify",
-    "dev": "concurrently \"npm:tailwind:dev\" \"php -S 127.0.0.1:8000 -t public\" \"cd public && npm run dev\"",
+    "setup:frontend": "cd frontend && npm install",
+    "tailwind:dev": "tailwindcss -i ./src/input.css -o ./index.css --watch",
+    "tailwind:build": "tailwindcss -i ./src/input.css -o ./index.css --minify",
+    "dev": "concurrently \"npm:tailwind:dev\" \"php -S 127.0.0.1:8000 -t frontend\" \"cd frontend && npm run dev\"",
     "build:css": "npm run tailwind:build"
   },
   "dependencies": {
